<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.AddM"
    tools:layout_editor_absoluteY="81dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="93dp"
        tools:layout_editor_absoluteY="93dp"
        tools:ignore="MissingConstraints">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/addm_btnsave"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/guardar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addm-rv" />

            <com.alimuzaffar.lib.widgets.AnimatedEditText
                android:id="@+id/addm_materiaName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:hint="@string/materia_name"
                android:inputType="textNoSuggestions"
                android:lines="1"
                app:animateCursor="true"
                app:animateTextClear="true"
                app:animationType="fromMiddle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <biz.borealis.numberpicker.NumberPicker
                android:id="@+id/addm_np"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginEnd="8dp"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="@+id/adm_tvSelectSemester"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/adm_tvSelectSemester"
                app:np_fade_text_color="@color/colorPrimaryDark"
                app:np_min_number="0"
                app:np_max_number="100"



                app:np_text_color="@color/colorPrimary"

                app:np_text_color_selected="@color/colorPrimaryDark"
                app:np_text_size="20dp" />

            <com.alimuzaffar.lib.widgets.AnimatedEditText
                android:id="@+id/addm_teacherName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:hint="@string/profesor_name"
                android:inputType="textNoSuggestions"
                android:lines="1"
                app:animateCursor="true"
                app:animateTextClear="true"
                app:animationType="fromMiddle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addm_materiaName" />

            <TextView
                android:id="@+id/adm_tvSelectSemester"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:text="@string/Semestre"
                app:layout_constraintEnd_toStartOf="@+id/addm_np"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addm_teacherName" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/addm-rv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:text="@string/Select_por"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addm_np" />


        </android.support.constraint.ConstraintLayout>


    </ScrollView>

</android.support.constraint.ConstraintLayout>